    * 0065 FIX: veeam_client: check behaviour improved when backup is in progress
    * 0066 FIX: veeam_jobs: check behaviour improved when backup is in progress
    * 0209 FIX: Cleaned up bad code in fileinfo.groups check
    * 0003 FIX: ps: Remove exceeding [ and ] in service description when using process inventory...
    * 0037 FIX: checkman: alcatel power - now with correct classification...

    Multisite:
    * 0001 New filters for selecting several host/service-groups at once...
    * 0050 New concept of favorite hosts and services plus matching filters and views...
    * 0211 GUI Notify: Added notify method "popup" to really create popup windows...
    * 0215 Added option to make HTML escape in plugin outputs configurable...
    * 0043 FIX: LDAP: Improved error reporting during synchronisation...
    * 0044 FIX: LDAP: Fixed error with empty groups during non nested group sync...
    * 0045 FIX: LDAP: Fixed error when synchronizing non nested groups to roles
    * 0046 FIX: Allowing "-" chars in var names again...
    * 0049 FIX: Fixed check-mk-automation call on each new created apache thread...
    * 0203 FIX: Changed sidebar reload interval to be more random...
    * 0204 FIX: Reduced I/O on logins with access time recording or failed login counts...
    * 0206 FIX: Fixed logwatch permission check when using liveproxy...
    * 0210 FIX: LDAP: Fixed problem syncing contactgroups of a user with umlauts in CN
    * 0035 FIX: display http[s] links in plugin output
    * 0006 FIX: Checkboxes for hosts/services were missing on modified views...

    WATO:
    * 0053 New rule for configuring the display_name of a service...
    * 0216 Supporting float values as SNMP timeout value now...
    * 0048 FIX: Fixed locking issue on host diagnose page
    * 0033 FIX: WATO forms: incorrect handling of checkbox state
    * 0205 FIX: Allowing star chars in variable names to fix role/permission editing...