@@ -26,6 +26,7 @@
     * 0209 FIX: Cleaned up bad code in fileinfo.groups check
     * 0003 FIX: ps: Remove exceeding [ and ] in service description when using process inventory...
     * 0037 FIX: checkman: alcatel power - now with correct classification...
+    * 0081 FIX: stored snmpwalks now get correct encoding of binary values...
 
     Multisite:
     * 0001 New filters for selecting several host/service-groups at once...
